<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <TextView
        android:id="@+id/app_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/banner_color"
        android:fontFamily="@font/arcade"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/banner_text_color"
        android:textSize="30sp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/question_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_banner"
        android:layout_centerInParent="true"
        android:layout_marginTop="25dp"
        android:text="@string/question_title"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question_number"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/question_text_toShow"
        android:textColor="@color/black"
        android:textSize="20sp" />


    <RadioGroup
        android:id="@+id/answer_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question_text"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"

        android:orientation="vertical">


        <RadioButton
            android:id="@+id/answerA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:button="@null"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/answer_button_background"
            android:onClick="scanForClick"
            android:text="@string/answer_A"/>

        <RadioButton
            android:id="@+id/answerB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:button="@null"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/answer_button_background"
            android:onClick="scanForClick"
            android:text="@string/answer_B"/>

        <RadioButton
            android:id="@+id/answerC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:button="@null"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/answer_button_background"
            android:onClick="scanForClick"
            android:text="@string/answer_C"/>

        <RadioButton
            android:id="@+id/answerD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:button="@null"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/answer_button_background"
            android:onClick="scanForClick"
            android:text="@string/answer_D"/>
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/return_to_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/return_to_menu"
        android:layout_marginBottom="30dp"
        />
</RelativeLayout>