<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/app_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/banner_color"
        android:fontFamily="@font/arcade"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/banner_text_color"
        android:textSize="30sp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/quiz_complete_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_banner"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/quiz_complete"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/percent_correct_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/correct_answers"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_below="@+id/quiz_complete_textview"
        android:layout_marginTop="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/return_to_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/return_to_menu"
        android:layout_marginBottom="30dp"
        />

</RelativeLayout>