<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/app_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/banner_color"
        android:fontFamily="@font/arcade"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/banner_text_color"
        android:textSize="30sp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/question_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_banner"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/question_result"
        android:textColor="@color/black"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/question_fact_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/question_fact"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_below="@+id/question_result"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_question_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/menu_button_background"
        android:text="@string/next_question"
        android:layout_alignParentBottom="true"
        android:insetTop="0dp"
        android:insetBottom="0dp"/>



</RelativeLayout>
